mobile fixes gb brf

--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -206,7 +206,7 @@
 							<a href="../../brf/">Bostadsrättsförening<i class="icono-arrow2-left"></i></a>
 							<span class="bread-crumbs-title xs-hide">Garantibesiktning</span>
 						</div>
-						<h1 class="common-IntroText2 text-white">Garantibesiktning ger din BRF trygghet genom att dolda byggfel upptäcks innan garantitiden löper ut.</h1>
+						<h1 class="common-IntroText text-white">Garantibesiktning ger din BRF trygghet genom att dolda byggfel upptäcks innan garantitiden löper ut.</h1>
 						<p>
 							Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren?
 							<br>
@@ -407,12 +407,12 @@
 		</div>
 	</section>
 	<!-- about us -->
-	<section class="slide whiteSlide autoHeight">
+	<section class="slide whiteSlide autoHeight" id="omOss">
 		<div class="content">
 			<div class="container-lg">
 
 					<div class="fix-10-12 margin-top-1 margin-bottom-5">
-						<h2 class="common-IntroText2" style="font-size: 42px;">Sveriges ledande entreprenadbesiktningsföretag</h2>
+						<h2 class="common-IntroText2 center">Sveriges ledande entreprenadbesiktningsföretag</h2>
 						<p class="common-BodyText margin-bottom-5 center">
 							Besiktningsman.se bildades 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
 							<br>
