--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -361,24 +361,8 @@
 					Redo att boka?
 					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 				</h3>
-				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div>
-				<script>
-					(function() {
-						var qs, js, q, s, d = document,
-							gi = d.getElementById,
-							ce = d.createElement,
-							gt = d.getElementsByTagName,
-							id = "typef_orm",
-							b = "https://embed.typeform.com/";
-						if (!gi.call(d, id)) {
-							js = ce.call(d, "script");
-							js.id = id;
-							js.src = b + "embed.js";
-							q = gt.call(d, "script")[0];
-							q.parentNode.insertBefore(js, q)
-						}
-					})()
-				</script>
+				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/BAbQjy" data-hide-headers=true style="width: 100%; height: 400px;"></div> 
+				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
@@ -464,7 +448,10 @@
 									<span class="common-Link"><a href="../../../om_oss/">Läs mer om oss</a> </span>
 								</li>
 							</ul>
-							<a href="#" class="common-Button blue text-white">kontakta mig</a>
+							<h3>Redo att boka?</h3>
+							<p>Fyll i formuläret så kontaktar vi dig.</p>
+							<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left" target="_blank">Kontakta mig </a>
+							<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 						</div>
 					</div>
 
