footer cta buttons redirects updated for brf

--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -462,14 +462,14 @@
 		<div class="container-lg padding-5 center">
 			<h3 class="center">Söker ni en annan besiktningstyp?</h3>
 			<div class="center-m-down">
-				<a href="../../entreprenad/" class="common-Button text-blue">
-					Till Entreprenadlistan
+				<a href="../../brf/" class="common-Button text-blue">
+					Till Tjänstelistan
 				</a>
-				<a href="../../entreprenad/" class="common-Button text-blue">
+				<a href="../../brf/#förbesiktning" class="common-Button text-blue">
+					Till Förbesiktning
+				</a>
+				<a href="../../brf/#slutbesiktning" class="common-Button text-blue">
 					Till Slutbesiktning
-				</a>
-				<a href="../../entreprenad/" class="common-Button text-blue">
-					Till Ny slutbesiktning
 				</a>
 			</div>
 		</div>
