Cta button title updated

--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -460,7 +460,7 @@
 	</section>
 	<section class="slide whiteSlide" id="footer-nav">
 		<div class="container-lg padding-5 center">
-			<h3 class="center">Söker ni en annan besiktningstyp?</h3>
+			<h3 class="center">Söker ni en annan besiktningstyp till er BRF?</h3>
 			<div class="center-m-down">
 				<a href="../../brf/" class="common-Button text-blue">
 					Till Tjänstelistan
