--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -218,7 +218,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../../../assets/img/backgrounds/foundations.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
+		<div class="background" style="background-image:url(../../../assets/img/backgrounds/apartments2.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
 	</section>
 	<!-- GB customers -->
 	<section class="slide whiteSlide autoHeight" style="background: #f6f9fc;">
@@ -226,22 +226,19 @@
 			<div class="container-lg">
 				<div class="fix-10-12">
 					<div class="col-5-12 center">
-						<h3 style="margin-top: 25px;">Vi har sedan 2003 arbetat som ett oberoende besiktningsföretag.</h3>
-						<p>Och besiktigat hundratals BRF'er, bland annat de byggda av:</p>
-						<ul class="flex grid-48 later equal">
-							<li class="col-3-12">
+						<h3 class="common-BodyTitle" style="margin-top: 25px;">Vi har sedan 2003 arbetat som ett oberoende besiktningsföretag.</h3>
+						<p class="common-BodyText">Och besiktigat ett stort antal fristående bostadsrättsföreningar,<br> bland annat de byggda av:</p>
+						<ul class="flex grid later equal">
+							<li class="col-3-12 equalElement">
 								<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
 							</li>
-							<!-- <li class="customer-logo">
-										<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
-									</li> -->
-							<li class="col-3-12">
+							<li class="col-3-12 equalElement">
 								<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
 							</li>
-							<li class="col-3-12">
-								<img src="../../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
+							<li class="col-3-12 equalElement">
+								<img src="../../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC">
 							</li>
-							<li class="col-3-12">
+							<li class="col-3-12 equalElement">
 								<img src="../../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
 							</li>
 						</ul>
