--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -48,6 +48,48 @@
 	        a.appendChild(r);
 	    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 	</script>
+	<!-- heap analytics -->
+	<script type="text/javascript">
+		window.heap = window.heap || [], heap.load = function(e, t) {
+			window.heap.appid = e, window.heap.config = t = t || {};
+			var r = t.forceSSL || "https:" === document.location.protocol,
+				a = document.createElement("script");
+			a.type = "text/javascript", a.async = !0, a.src = (r ? "https:" : "http:") + "//cdn.heapanalytics.com/js/heap-" + e + ".js";
+			var n = document.getElementsByTagName("script")[0];
+			n.parentNode.insertBefore(a, n);
+			for (var o = function(e) {
+					return function() {
+						heap.push([e].concat(Array.prototype.slice.call(arguments, 0)))
+					}
+				}, p = ["addEventProperties", "addUserProperties", "clearEventProperties", "identify", "resetIdentity", "removeEventProperty", "setEventProperties", "track", "unsetEventProperty"], c = 0; c < p.length; c++) heap[p[c]] = o(p[c])
+		};
+		heap.load("1203366256");
+	</script>
+	<!-- Facebook Pixel Code -->
+	<script>
+		! function(f, b, e, v, n, t, s) {
+			if (f.fbq) return;
+			n = f.fbq = function() {
+				n.callMethod ?
+					n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+			};
+			if (!f._fbq) f._fbq = n;
+			n.push = n;
+			n.loaded = !0;
+			n.version = '2.0';
+			n.queue = [];
+			t = b.createElement(e);
+			t.async = !0;
+			t.src = v;
+			s = b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t, s)
+		}(window, document, 'script',
+			'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '1747503458639948');
+		fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1747503458639948&ev=PageView&noscript=1" /></noscript>
+	<!-- End Facebook Pixel Code -->
 </head>
 
 <body class="slides scroll animated simplifiedMobile defaultScroll">
@@ -229,17 +271,17 @@
 						<h3 class="common-BodyTitle" style="margin-top: 25px;">Vi har sedan 2003 arbetat som ett oberoende besiktningsföretag.</h3>
 						<p class="common-BodyText">Och besiktigat ett stort antal fristående bostadsrättsföreningar,<br> bland annat de byggda av:</p>
 						<ul class="flex grid later equal">
-							<li class="col-3-12 equalElement">
-								<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+							<li class="col-3-12 equalElement margin-bottom-1">
+								<img src="../../../assets/img/logos/riksbyggen.svg" alt="RIKSBYGGEN" style="width: 140px;">
 							</li>
-							<li class="col-3-12 equalElement">
-								<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
+							<li class="col-3-12 equalElement margin-bottom-1">
+								<img src="../../../assets/img/logos/sb.png" alt="SB" style="width: 80px;">
 							</li>
-							<li class="col-3-12 equalElement">
-								<img src="../../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC">
+							<li class="col-3-12 equalElement margin-bottom-1">
+								<img src="../../../assets/img/logos/bonava.png" alt="BONAVA" style="width: 100px;">
 							</li>
-							<li class="col-3-12 equalElement">
-								<img src="../../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
+							<li class="col-3-12 equalElement margin-bottom-1">
+								<img src="../../../assets/img/logos/arosbostad.png" alt="AROS BOSTAD" style="width: 200px;">
 							</li>
 						</ul>
 
@@ -259,7 +301,7 @@
 							<h2 class="common-IntroText">Varför göra en Garantibesiktning med Besiktningsman.se?</h2>
 							<p class="common-BodyText">Om du har en BRF som är nybyggd eller haft renoveringsarbeten utförda för mindre än 2 år sedan så gäller en avtalsmässig garantitid, vilket ger dig rätten att påkalla en garantibesiktning för att se om fel
 								framträtt.</p>
-							<p class="common-BodyText">Om det visar sig att fel har framträtt då blir entreprenören skyldig till att åtgärda felen - vilket inte ska kosta bostadsrättsföreningen något.</p>
+							<p class="common-BodyText margin-bottom-5">Om det visar sig att fel har framträtt då blir entreprenören skyldig till att åtgärda felen - vilket inte ska kosta bostadsrättsföreningen något.</p>
 
 							<ul class="flex">
 								<li class="col-4-12">
@@ -369,9 +411,6 @@
 						<li class="customer-logo">
 							<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
 						</li>
-						<!-- <li class="customer-logo">
-								<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
-							</li> -->
 						<li class="customer-logo">
 							<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
 						</li>
@@ -429,7 +468,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="fix-10-12 padding-5">
+					<div class="fix-10-12 margin-top-1">
 						<div class="center-m-down">
 							<ul class="grid later equal center margin-bottom-3">
 								<li class="col-8-12">
@@ -455,18 +494,18 @@
 			</div>
 		</div>
 	</section>
-	<section class="slide whiteSlide" id="footer-nav">
+	<section class="slide whiteSlide margin-top-1" id="footer-nav">
 		<div class="container-lg padding-5 center">
 			<h3 class="center">Söker ni en annan besiktningstyp till er BRF?</h3>
 			<div class="center-m-down">
 				<a href="../../brf/" class="common-Button text-blue">
-					Till Tjänstelistan
+					Till tjänstlistan
 				</a>
 				<a href="../../brf/#förbesiktning" class="common-Button text-blue">
-					Till Förbesiktning
+					Till förbesiktning
 				</a>
 				<a href="../../brf/#slutbesiktning" class="common-Button text-blue">
-					Till Slutbesiktning
+					Till slutbesiktning
 				</a>
 			</div>
 		</div>
