gb brf text fix

--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -14,12 +14,12 @@
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Garantibesiktning ger din BRF trygghet genom att dolda byggfel upptäcks innan garantitiden löper ut." />
+	<meta property="og:title" content="Garantibesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut." />
 	<meta property="og:description" content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/garantibesiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
-	<meta name="twitter:title" content="Garantibesiktning ger din BRF trygghet genom att dolda byggfel upptäcks innan garantitiden löper ut." />
+	<meta name="twitter:title" content="Garantibesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut." />
 	<meta name="twitter:description" content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
@@ -248,7 +248,7 @@
 							<a href="../../brf/">Bostadsrättsförening<i class="icono-arrow2-left"></i></a>
 							<span class="bread-crumbs-title xs-hide">Garantibesiktning</span>
 						</div>
-						<h1 class="common-IntroText text-white">Garantibesiktning ger din BRF trygghet genom att dolda byggfel upptäcks innan garantitiden löper ut.</h1>
+						<h1 class="common-IntroText text-white">Garantibesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut.</h1>
 						<p>
 							Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren?
 							<br>
