added pdf links

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -22,9 +22,7 @@
 	<meta name="twitter:title" content="Här kan du läsa viktigt utbildningsmaterial gällande besiktningar" />
 	<meta name="twitter:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<!-- Fonts and Material Icons -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-
-
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
@@ -220,7 +218,7 @@
 									<div class="content blue">
 										<div class="cover blue">
 											<img
-												src="../assets/documents/brf_sb_cover.svg"
+												src="../assets/documents/covers/brf_sb_cover.svg"
 												title="Hur går en slutbesiktning till?
 
 När besiktningsmannen har skickat slutbesiktningsutlåtandet, vilket är ett juridiskt dokument, så är hans uppdrag avslutat.
@@ -239,7 +237,7 @@ Besiktningsmannen är objektiv samt opartisk och får därför inte uttala sig o
 									<div class="content blue">
 										<div class="cover blue">
 											<img
-												src="../assets/documents/brf_eb_cover.svg"
+												src="../assets/documents/covers/brf_eb_cover.svg"
 												title="Hur fungerar en efterbesiktning?
 
 Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas.
@@ -261,7 +259,7 @@ besiktningsman går ej in i lägenhet vid serviceläge om inte representant är 
 									<div class="content blue">
 										<div class="cover blue">
 											<img
-												src="../assets/documents/brf_ssb_cover.svg"
+												src="../assets/documents/covers/brf_ssb_cover.svg"
 												title="Hur fungerar en särskild besiktning?
 Besiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas.
 Besiktningsmannen skall beredas tillträde för att möjliggöra besiktning.
@@ -282,13 +280,13 @@ skall detta vara befullmäktigat att föra talan.
 						<br>
 						<p class="cta-headline bold">Formulär & böcker</p>
 						<ul class="grid grid-74 later equal left margin-top-5">
-
-							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
+ 							<!-- ROW 1  -->
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
 								<a href="../assets/documents/hantverkarformularet-14-protokoll-konsumentverket.pdf" class="card" style="background: #44266a;" target="_blank">
 									<div class="content" style="background: #44266a;">
 										<div class="cover" style="background: #44266a;">
 											<img
-											src="../assets/img/backgrounds/hantverkarformularet14_cover.png"
+											src="../assets/documents/covers/hantverkarformularet14_cover.png"
 											title="Hantverkarformuläret 14
 Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten där beställaren är konsument och hantverkaren är näringsidkare."
 											alt="Hantverkarformuläret 14"
@@ -300,12 +298,12 @@ Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten dä
 									</div>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
 								<a href="../assets/documents/besiktningsmannaboken-2016-konsumentverket.pdf" class="card" style="background: #f7fafc;" target="_blank">
 									<div class="content" style="background: #f7fafc;">
 										<div class="cover" style="background: #f7fafc;">
 											<img
-											src="../assets/img/backgrounds/besiktningsmannaboken16_cover.png"
+											src="../assets/documents/covers/besiktningsmannaboken16_cover.png"
 											title="Besiktningsmannaboken 2016
 Handbok för besiktningar av nybyggda småhus"
 											alt="Besiktningsmannaboken 2016"
@@ -317,12 +315,12 @@ Handbok för besiktningar av nybyggda småhus"
 									</div>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
 								<a href="../assets/documents/konsumenttjanstlagen-rev-2016-juni-konsumentverket.pdf" class="card" style="background: #172663;" target="_blank">
 									<div class="content" style="background: #172663;">
 										<div class="cover" style="background: #172663;">
 											<img
-											src="../assets/img/backgrounds/konsumenttjanstlagen_cover.png"
+											src="../assets/documents/covers/konsumenttjanstlagen_cover.png"
 											title="Konsumenttjänstlagen SFS 1985:716
 Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 											alt="Konsumenttjänstlagen SFS 1985:716 - Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
@@ -334,9 +332,71 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 									</div>
 								</a>
 							</li>
+ 							<!-- ROW 2  -->
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/BBV.pdf" class="card" style="background: #E67537;" target="_blank">
+									<div class="content" style="background: #E67537;">
+										<div class="cover" style="background: #E67537;">
+											<img
+											src="../assets/documents/covers/BBV.png"
+											title="Byggkeramikrådets
+branschregler för våtrum"
+											alt="Branschregler för kakel och klinker i våtrum.
+Reglerna är framtagna av Byggkeramikrådet med
+hänsyn till myndighetskraven i Boverkets byggregler.
+BFS 2011:6med ändringar till och med BFS 2015:3, BBR."
+											height="280"
+											width="300"
+											rel="nofollow"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/Branschregler_2016_1_sakervatten.pdf" class="card" style="background: #E7F4F7;" target="_blank">
+									<div class="content" style="background: #E7F4F7;">
+										<div class="cover" style="background: #E7F4F7;">
+											<img
+											src="../assets/documents/covers/sakervatten_cover.png"
+											title="Byggkeramikrådets
+branschregler för våtrum"
+											alt="Branschregler för kakel och klinker i våtrum.
+Reglerna är framtagna av Byggkeramikrådet med
+hänsyn till myndighetskraven i Boverkets byggregler.
+BFS 2011:6med ändringar till och med BFS 2015:3, BBR."
+											height="280"
+											width="300"
+											rel="nofollow"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/gvk_sakra_vatrum_2016_1.pdf" class="card" style="background: #fff;" target="_blank">
+									<div class="content" style="background: #fff;">
+										<div class="cover" style="background: #fff;">
+											<img
+											src="../assets/documents/covers/sakravatrum_cover.png"
+											title="Byggkeramikrådets
+branschregler för våtrum"
+											alt="Branschregler för kakel och klinker i våtrum.
+Reglerna är framtagna av Byggkeramikrådet med
+hänsyn till myndighetskraven i Boverkets byggregler.
+BFS 2011:6med ändringar till och med BFS 2015:3, BBR."
+											height="280"
+											width="300"
+											rel="nofollow"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
 						</ul>
 						<br>
-						<p class="cta-headline bold">Regler och Toleranser</p>
+						<h2 class="common-IntroText2">Länkar</h2>
+						<p class="common-BodyTitle2">Regler och Toleranser</p>
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
