Updated section labels and classes + added mobile menu

--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -92,7 +92,7 @@
 	<!-- End Facebook Pixel Code -->
 </head>
 
-<body class="slides scroll animated simplifiedMobile defaultScroll">
+<body class="slides scroll simplifiedMobile defaultScroll">
 	<!-- Google Tag Manager (noscript) -->
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXG3P8L" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
@@ -183,7 +183,7 @@
 				<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
 			</svg></div>
 		<div class="content">
-			<a href="../../../" class="logo"><img src="../../../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
+			<a href="../../../" class="logo"><img src="../../../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 
 				<li>
@@ -230,7 +230,7 @@
 				<br>
 				<li>
 					<a href="tel:0101654000">
-						<p class="bold small">Telefon: 010-165 40 00</p>
+						<p class="bold">Telefon: 010-165 40 00</p>
 					</a>
 				</li>
 			</ul>
@@ -393,7 +393,7 @@
 		</div>
 	</section>
 	<!-- GB booking -->
-	<section class="slide form-section" id="boka" style="background: #f6f9fc;">
+	<section class="slide form-section" data-name="boka" name="boka" data-title="boka" id="boka" style="background: #f6f9fc;">
 		<div class="container-lg">
 			<div class="formBackground form-column">
 				<h3 class="pad-header margin-0 center common-BodyTitle">
