--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -110,7 +110,7 @@
 
 </head>
 
-<body class="slides scroll animated simplifiedMobile defaultScroll">
+<body class="slides scroll simplifiedMobile defaultScroll">
 	<!-- Google Tag Manager (noscript) -->
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXG3P8L" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
