--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -395,6 +395,14 @@
 	<!-- GB booking -->
 	<section class="slide form-section" data-name="boka" name="boka" data-title="boka" id="boka" style="background: #f6f9fc;">
 		<div class="container-lg">
+			<!-- temp typeform fix for mobile -->
+			<div class="mobileContactButtonFix">
+				<h3>Redo att boka?</h3>
+				<p>Fyll i formuläret så kontaktar vi dig.</p>
+				<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="popup" target="_blank">Kontakta mig </a>
+				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+			</div>
+			<!-- original typeform -->
 			<div class="formBackground form-column">
 				<h3 class="pad-header margin-0 center common-BodyTitle">
 					Redo att boka?
