Adding link to flb page + new sub page

--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -247,12 +247,15 @@
 		</div>
 
 	</section>
-	<section class="slide whiteSlide autoHeight" style="padding-bottom: 20px;">
+	<section class="slide whiteSlide autoHeight" id="servicesList" style="padding-bottom: 20px;">
 		<div class="container">
 			<div class="container-lg">
 				<div class="fix-10-12 left">
 					<h2 class="common-BodyTitle">Traditionella besiktningar enligt AB-ABT</h2>
-
+					<a href="../entreprenad/fortlopandebesiktning/" class="common-Button text-blue">
+						<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+						Fortlöpande besiktning
+					</a>
 					<div class="accordion" id="services">
 						<h3>Förbesiktning</h3>
 						<div>
