--- a/index.html
+++ b/index.html
@@ -689,6 +689,12 @@
 	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script src="js/slides.min.js" type="text/javascript" name="main-scripts"></script>
 	<script src="js/custom.js" type="text/javascript" name="main-scripts"></script>
+	<script>
+	  window.intercomSettings = {
+	    app_id: "ybt1le09"
+	  };
+	</script>
+	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ybt1le09';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
 
 </body>
 
