--- a/tjanster/entreprenad/fortlopandebesiktning/index.html
+++ b/tjanster/entreprenad/fortlopandebesiktning/index.html
@@ -15,12 +15,12 @@
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Fortlöpande besiktning säkerställer kvalitetskritiska moment i entreprenadens alla etapper." />
-	<meta property="og:description" content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
+	<meta property="og:description" content="Vill du säkerställa att entreprenaden färdigställs enligt tidplanen och inom budget? Då är fortlöpande besiktning en stor fördel." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/garantibesiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title" content="Fortlöpande besiktning säkerställer kvalitetskritiska moment i entreprenadens alla etapper." />
-	<meta name="twitter:description" content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
+	<meta name="twitter:description" content="Vill du säkerställa att entreprenaden färdigställs enligt tidplanen och inom budget? Då är fortlöpande besiktning en stor fördel." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
