--- a/tjanster/entreprenad/fortlopandebesiktning/index.html
+++ b/tjanster/entreprenad/fortlopandebesiktning/index.html
@@ -304,8 +304,8 @@
 								 - En fortlöpande besiktning säkerställer att dessa delar är utförda korrekt innan de byggs in.
 							</p>
 							<p class="common-BodyText margin-bottom-5">
-								Vi kan hjälpa er redan i projekteringsstadiet med att identifiera vilka kvalitetskritiska moment som finns i ditt projekt.
-								Genom fortlöpande besiktningar av dessa så minimerar vi risken för en förskjuten tidplan eller sent och dyrt avhjälpande.</p>
+								Vi kan hjälpa er redan i projekteringsstadiet med att bridentifiera vilka kvalitetskritiska moment som finns i ditt projekt.
+								Genom fortlöpande besiktningar av dessa så minimerar vi risken för en förskjuten tidplan eller <br> sent och dyrt avhjälpande.</p>
 							<ul class="flex">
 								<li class="col-4-12">
 									<img src="../../../assets/svg/scope_icon.svg" alt="Ikon som illusterar bilagor" style="width:80px;">
@@ -401,7 +401,7 @@
 			<div class="mobileContactButtonFix">
 				<h3>Redo att boka?</h3>
 				<p>Fyll i formuläret så kontaktar vi dig.</p>
-				<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="popup" target="_blank">Kontakta mig </a>
+				<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/WkKJQ4" data-mode="popup" target="_blank">Kontakta mig </a>
 				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 			</div>
 			<!-- original typeform -->
@@ -410,7 +410,7 @@
 					Redo att boka?
 					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 				</h3>
-				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/BAbQjy" data-hide-headers=true style="width: 100%; height: 400px;"></div>
+				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/WkKJQ4" data-hide-headers=true style="width: 100%; height: 400px;"></div>
 				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 			</div>
 			<div class="secondary-column">
@@ -493,7 +493,7 @@
 							</ul>
 							<h3>Redo att boka?</h3>
 							<p>Fyll i formuläret så kontaktar vi dig.</p>
-							<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left" target="_blank">Kontakta mig </a>
+							<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/WkKJQ4" data-mode="drawer_left" target="_blank">Kontakta mig </a>
 							<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 						</div>
 					</div>
