text update for flb about us

--- a/tjanster/entreprenad/fortlopandebesiktning/index.html
+++ b/tjanster/entreprenad/fortlopandebesiktning/index.html
@@ -441,19 +441,18 @@
 					<div class="fix-10-12 margin-top-1 margin-bottom-5">
 						<h2 class="common-IntroText2 center">Sveriges ledande entreprenadbesiktningsföretag</h2>
 						<p class="common-BodyText margin-bottom-5 center">
-							Besiktningsman.se bildades 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
-							<br>
-							Våra välutbildade medarbetare har gedigen bakgrund från byggsektorn och besiktningsarbete.
-							<br>
-							Vårt fokus är att bemöta höga kundkrav på stabilt och sakkunnigt utförande.
+Besiktningsman.se bildades 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
+<br>
+Våra välutbildade medarbetare har gedigen bakgrund från byggsektorn och besiktningsarbete.
+<br>
+Vårt fokus är att bemöta höga kundkrav på stabilt och sakkunnigt utförande.
 						</p>
 						<ul class="flex left">
 							<li class="col-6-12 fromBottomLeft">
 								<h3 class="common-BodyTitle">Vi har sedan 2012 arbetat med vår egen besiktningsplattform iSpect.</h3>
 								<p class="common-BodyText">
-									Det betyder att vi arbetar digitalt med alla besiktningar som vi utför runtom i Sverige.
-									<br>
-									Det innebär att vi via iSpect har full koll på vilka fel som brukar dyka upp under garantitiden för din BRF, beroende på hur den byggdes, och vart i landet byggnaden står.
+									Det betyder att vi utför besiktningar digitalt med iSpect runtom i Sverige.
+									I iSpect:s feldatabas har vi trehundra tusen av de vanligaste förekommande felen vid nyproduktion och rot.
 								</p>
 							<li class="col-6-12 bottom">
 								<img src="../../../assets/img/backgrounds/inspector_ipad.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
@@ -463,12 +462,10 @@
 					<div class="fix-10-12 margin-bottom-5">
 						<ul class="flex left">
 							<li class="col-6-12 fromBottomLeft">
-								<h3 class="common-BodyTitle">När våra besiktningsmän utför en besiktning av din BRF så kommer den utföras med hjälp av iSpect.</h3>
+								<h3 class="common-BodyTitle">När våra besiktningsmän utför en besiktning av ett byggmoment så kommer den utföras med hjälp av iSpect.</h3>
 								<p class="common-BodyText">
-									Direkt efter besiktningen utförts får ni en komplett felbilaga med alla upptäckta brister.
-									<br>
-									3 dagar senare levererar vi det kompletta utlåtandet över besiktningen,
-									så att ni kan vara trygga i att alla eventuella garantiärenden är dokumenterade korrekt så att de kan åtgärdas.
+									Direkt efter besiktningen utförts får ni en komplett felbilaga i iSpectportal, med ansvar på respektive entreprenör.
+									Därmed påbörjas ett kostnadseffektivt avhjälpande direkt.
 								</p>
 							<li class="col-6-12 bottom">
 								<img src="../../../assets/img/backgrounds/inspector_documents.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
