--- a/tjanster/entreprenad/fortlopandebesiktning/index.html
+++ b/tjanster/entreprenad/fortlopandebesiktning/index.html
@@ -304,7 +304,7 @@
 								 - En fortlöpande besiktning säkerställer att dessa delar är utförda korrekt innan de byggs in.
 							</p>
 							<p class="common-BodyText margin-bottom-5">
-								Vi kan hjälpa er redan i projekteringsstadiet med att bridentifiera vilka kvalitetskritiska moment som finns i ditt projekt.
+								Vi kan hjälpa er redan i projekteringsstadiet med att identifiera vilka kvalitetskritiska moment som finns i ditt projekt.
 								Genom fortlöpande besiktningar av dessa så minimerar vi risken för en förskjuten tidplan eller <br> sent och dyrt avhjälpande.</p>
 							<ul class="flex">
 								<li class="col-4-12">
