edited meta url

--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Entreprenadbesiktning för nyproduktion och ROT" />
 	<meta property="og:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning av nyproduktion och ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
-	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/entreprenad" />
+	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/entreprenad/forbesiktning" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title" content="Entreprenadbesiktning för nyproduktion och ROT" />
