link to sb on main page E

--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -256,6 +256,10 @@
 						<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 						Fortlöpande besiktning
 					</a>
+					<a href="../entreprenad/slutbesiktning/" class="common-Button text-blue">
+						<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+						Slutbesiktning
+					</a>
 					<div class="accordion" id="services">
 						<h3>Förbesiktning</h3>
 						<div>
@@ -303,7 +307,7 @@
 								</li>
 							</ul>
 						</div>
-						<h3>Slutbesiktning</h3>
+						<!-- <h3>Slutbesiktning</h3>
 						<div>
 							<ul>
 								<li class="col-5-12">
@@ -334,19 +338,19 @@
 										handledning för entreprenadbesiktning</p>
 									<p>• ”Slutbesiktningen är den för båda parter viktigaste besiktningen. Det gäller nämligen här att pröva och avgöra frågan om godkännande av entreprenaden, vilket i sin tur har många betydelsefulla konsekvenser för parterna. Det bör betonas, att –
 										om inte parterna kommer överens om annat – slutbesiktning ska ske först vid kontraktstidens utgång eller om entreprenaden färdigställas senare, utan dröjsmål efter det att entreprenören anmält entreprenaden färdigställd.”</p>
-									<!-- typeform button -->
+
 									<p class="bold">Redo att boka? Lämna ett meddelande så hjälper vi dig!</p>
 									<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/vHXN4C" data-mode="drawer_left" target="_blank">
 										Lämna ett meddelande
 									</a>
-									<!-- typeform JS -->
+
 									<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 									<a href="tel:0101654000">
 										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
 									</a>
 								</li>
 							</ul>
-						</div>
+						</div> -->
 						<h3>Ny slutbesiktning</h3>
 						<div>
 							<ul>
